IO-18(feat: add email notifications)